--- a/addToCart.html
+++ b/addToCart.html
@@ -36,7 +36,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src=".\public\images\logo-no-strap.png"
+              src="public\images\logo-no-strap.png"
               alt="Cartopia"
               class="logo"
               width="25%"
@@ -132,7 +132,7 @@
       <div class="section-footer">
         <div class="footer-container container">
           <div class="content_1">
-            <img src=".\public\images\logo-no-strap.png" alt="logo" />
+            <img src="public\images\logo-no-strap.png" alt="logo" />
             <p>
               Welcome to Cartopia.com, your ultimate destination for
               cutting-edge gadgets!
