--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src=".\public\images\logo-no-strap.png"
-              alt="thapa eCommerce logo"
+              src="public\images\logo-no-strap.png"
+              alt="Cartopia"
               class="logo"
               width="80%"
               height="auto"
@@ -158,7 +158,7 @@
       <div class="section-footer">
         <div class="footer-container container">
           <div class="content_1">
-            <img src=".\images\logo-no-strap.png" alt="logo" />
+            <img src="public/images/logo-no-strap.png" alt="logo" />
             <p>
               Welcome to Cartopia.com, your ultimate destination for cutting-edge
               gadgets!
